<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/afg_bg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navBar4"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="#034687"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="#034687"
        android:text="@string/backBtnStr"
        app:backgroundTint="#034687"
        app:layout_constraintBottom_toBottomOf="@+id/navBar4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/navBar4" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="569dp"
        android:layout_height="846dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBar4">

        <TextView
            android:id="@+id/shelterName"
            android:layout_width="500dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="#034687"
            android:gravity="center"
            android:text="@string/registerLabelStr"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/whiteBox"
            android:layout_width="500dp"
            android:layout_height="600dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="#FFFFFF">

            <LinearLayout
                android:id="@+id/whiteBoxLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whiteBox">

                <EditText
                    android:id="@+id/enterFacName"
                    android:layout_width="450dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="40dp"
                    android:ems="10"
                    android:hint="@string/facilityNameHintStr"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/enterEmail"
                    android:layout_width="450dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/enterEmailHintStr"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/enterPhone"
                    android:layout_width="450dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/PhoneNumStr"
                    android:importantForAutofill="no"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/enterPassword2"
                    android:layout_width="450dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/EnterPasswordHintStr"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/CreateAccButtonStr"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:backgroundTint="#034687" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.AFGApp.DarkBlueAccent"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/createText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/loginBtn"
                    android:textColor="#034687"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>