<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/afg_bg"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#034687"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/IAm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/Iam"
            android:textSize="48sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/lookForShelterButton"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:width="350sp"
            android:height="80sp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/LookingForShelter"
            android:textSize="20sp"
            app:backgroundTint="#034687" />

        <Button
            android:id="@+id/haveFacilityButton"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:width="350sp"
            android:height="80sp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/FacilityOwner"
            android:textSize="20sp"
            app:backgroundTint="#034687" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>